<resources>
    <string name="app_name">BWAMOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_filled">*********</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">emailaddress@gmail.com</string>
    <string name="photo">Photo</string>
    <string name="dummy_welcome_user">Welcome, \nZaero BLitz</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="dummy_username">Zaero Blitz</string>
    <string name="dummy_wallet">IDR 280.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dummy_movie_title">Goblin Slayer</string>
    <string name="dummy_movie_genre">Action, Military</string>
    <string name="story_board">Storyboard</string>
    <string name="dummy_movie_desc">Goblin Slayer (ゴブリンスレイヤー, Goburin Sureiyā) is the series \' titular main character. He is an experienced silver-ranked adventurer who only concerns himself with hunting goblins.</string>
    <string name="who_s_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="dummy_date">12 Aug, 10 AM</string>
    <string name="cinema">Cinema</string>
    <string name="dummy_cinema">Depok Mall, Cinema 3</string>
    <string name="items">Items</string>
    <string name="dummy_seat_1">Seat No. C1</string>
    <string name="dummy_seat_2">Seat No. C2</string>
    <string name="dummy_price">IDR. 70.000</string>
    <string name="total_bayar_text">Total yang Harus Dibayar</string>
    <string name="dummy_price_2">IDR 140.000</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="dummy_price_3">IDR 200.000</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="checkout_success_desc">Tiket telah berhasil dibeli dan \nselamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="simpan_data_terbaru">Simpan Data Terbaru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_saldo_desc">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="my_wallet">My Wallet</string>
    <string name="dummy_price_4">IDR 280.000</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="dummy_history_movies">200 Movies</string>
    <string name="daftar_film_yang_sudah_dibeli">Daftar Film yang Sudah Dibeli</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s">Today\'s</string>
    <string name="dummy_total_movies">10 Movies</string>
    <string name="quick_print">Quick Print</string>
    <string name="scan_qr">Scan QR</string>
    <string name="setting">Setting</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="barcode_dialog">Silahkan melakukan scanning pada counter tiket terdekat</string>
    <string name="tutup">Tutup</string>
    <string name="top_up_saldo">Top Up Saldo</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="custom_amount_text">Jumlah nominal</string>
    <string name="quick_options">Quick Options</string>
    <string name="top_up_10k">IDR \n10.000</string>
    <string name="top_up_25k">IDR \n25.000</string>
    <string name="top_up_50k">IDR \n50.000</string>
    <string name="top_up_75k">IDR \n75.000</string>
    <string name="top_up_100k">IDR \n100.000</string>
    <string name="top_up_200k">IDR \n200.000</string>
    <string name="top_up_sekarang">Top Up Sekarang</string>
    <string name="success_top_up_headline">Yout Got It</string>
    <string name="success_top_up_message">E-Wallet telah berhasil \nuntuk diperbarui</string>
    <string name="lihat_transaksi">Lihat Transaksi</string>
</resources>
