<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.TopUpActivity"
    android:background="@color/colorBluePrimary">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_chevron_left_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:gravity="center"
        android:text="@string/my_wallet"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/dummy_price_4"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/saldo_tersedia"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_balance" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/custom_amount"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/edt_custom_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="4dp"
        android:hint="@string/custom_amount_text"
        android:textColorHint="@color/colorWhite"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/montserrat_semi_bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/quick_options"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_custom_amount" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <Button
            android:id="@+id/btn_top_up_1"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_10k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_top_up_2"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_25k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_top_up_3"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_50k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btn_top_up_4"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_75k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_top_up_5"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_100k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_top_up_6"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/top_up_200k"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/ic_rectangle_empty"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_top_up_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_pink_rectangle"
        android:text="@string/top_up_sekarang"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>